# SWEN-755

./: .gitignore  CMakeLists.txt  README.md  windows.cmake
Assignment1/: CMakeLists.txt  README.md
Assignment1/docs/: Assignment1.doxygen
Assignment1/include/: Sensor.hpp
Assignment1/include/common/: HeartbeatReceiver.hpp  HeartbeatSender.hpp  Thread.hpp
Assignment1/src/: Sensor.cpp  Sensor.h  SensorProcess.cpp  main.cpp
Assignment1/src/common/: HeartbeatMessage.cpp  HeartbeatReceiver.cpp  HeartbeatSender.cpp  Thread.cpp
Assignment2/: CMakeLists.txt  README.md
Assignment2/include/: FaultMonitor.hpp  Message.hpp  Sensor.hpp  SyncedSensor.hpp
Assignment2/src/: FaultMonitor.cpp  Message.cpp  Sensor.cpp  SyncedSensor.cpp  SyncedSensorProcess.cpp  main.cpp
Assignment3/: CMakeLists.txt  README.md
Assignment3/include/: CircleDetectorCommand.hpp  Command.hpp  FibonacciCommand.hpp  PiEstimatorCommand.hpp  PrimeNumberCountCommand.hpp  PurePriorityScheduler.hpp  Scheduler.hpp  ThreadPool.hpp  WorkerThread.hpp
Assignment3/src/: CircleDetectorCommand.cpp  FibonacciCommand.cpp  PiEstimatorCommand.cpp  PrimeNumberCountCommand.cpp  PurePriorityScheduler.cpp  ThreadPool.cpp  WorkerThread.cpp  main.cpp
Assignment4/: CMakeLists.txt  README.md
Assignment4/css/: style.css
Assignment4/include/: AuthApplication.hpp  HelloApplication.hpp  PermissionLevel.hpp  SessionManager.hpp  User.hpp  UserManager.hpp
Assignment4/include/model/: Session.hpp  User.hpp
Assignment4/src/: AuthApplication.cpp  HelloApplication.cpp  SessionManager.cpp  UserManager.cpp  main.cpp
Assignment4/src/model/: Session.cpp  User.cpp
common/: CMakeLists.txt  README.md
common/include/: HeartbeatReceiver.hpp  HeartbeatSender.hpp
common/include/core/: MessageQueue.hpp  Thread.hpp
common/include/faulthandle/: Client.hpp  Message.hpp  Server.hpp
common/include/heartbeat/: HeartbeatMessage.hpp  HeartbeatReceiver.hpp  HeartbeatSender.hpp  Message.hpp  Receiver.hpp  Sender.hpp
common/include/sync/: Message.hpp  Receiver.hpp  Sender.hpp
common/src/: HeartbeatMessage.cpp  HeartbeatReceiver.cpp  HeartbeatSender.cpp  Thread.cpp
common/src/core/: Thread.cpp
common/src/faulthandle/: Client.cpp  Message.cpp  Server.cpp
common/src/heartbeat/: HeartbeatMessage.cpp  HeartbeatReceiver.cpp  HeartbeatSender.cpp  Message.cpp  Receiver.cpp  Sender.cpp
common/src/sync/: Message.cpp  Receiver.cpp  Sender.cpp
common/test/: BoostTestHelpers.cmake  CMakeLists.txt
common/test/heartbeat/: testHeartbeat.cpp
common/test/sync/: testSync.cpp
docs/: doxygen.in
firstCmakeProject/: CMakeLists.txt  README.md
firstCmakeProject/include/: HelloWorld.hpp  HelloWorldPrinter.hpp
firstCmakeProject/src/: HelloWorld.cpp  HelloWorldPrinter.cpp  main.cpp
